--- a/package.json
+++ b/package.json
@@ -5,20 +5,37 @@
   "author": "dsalexan",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
+    "tools:sync": "gulp sync",
+    "tools:update": "gulp update",
+    "dev": "npm run tools:sync && nuxt",
+    "build": "npm run tools:update && nuxt build",
+    "start": "npm run tools:update && nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "fix": "eslint --ext .js,.vue --ignore-path .gitignore . --fix",
     "test": "jest"
   },
   "dependencies": {
+    "@koumoul/vuetify-jsonschema-form": "^0.36.0",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
+    "eslint-plugin-import": "^2.19.1",
+    "gulp": "^4.0.2",
+    "gulp-clean": "^0.4.0",
+    "gulp-git": "^2.10.0",
+    "jsonschema": "^1.2.5",
     "lodash": "^4.17.15",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "schema-validator": "^3.3.1",
+    "vue-awesome-form": "^1.0.4",
+    "vue-flash-message": "^0.7.2",
+    "vue-form-generator": "^2.3.4",
+    "vue-izitoast": "^1.2.1",
+    "vue-m-message": "^2.0.0",
+    "vue-toast-notification": "^0.0.3",
+    "vuedraggable": "^2.23.2",
+    "vuetify-toast-snackbar": "^0.6.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
