done so much, its pretty much usable by now

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "tools:sync": "gulp sync",
     "tools:update": "gulp update",
-    "dev": "npm run tools:sync && nuxt",
+    "dev": "nuxt",
     "build": "npm run tools:update && nuxt build",
     "start": "npm run tools:update && nuxt start",
     "generate": "nuxt generate",
@@ -20,6 +20,8 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
+    "color": "^3.1.2",
+    "debug": "^4.1.1",
     "eslint-plugin-import": "^2.19.1",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
@@ -27,7 +29,10 @@
     "jsonschema": "^1.2.5",
     "lodash": "^4.17.15",
     "nuxt": "^2.0.0",
+    "rainbowvis.js": "^1.0.1",
     "schema-validator": "^3.3.1",
+    "supports-color": "^7.1.0",
+    "uuid": "^3.3.3",
     "vue-awesome-form": "^1.0.4",
     "vue-flash-message": "^0.7.2",
     "vue-form-generator": "^2.3.4",
