--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   },
   "dependencies": {
     "@koumoul/vuetify-jsonschema-form": "^0.36.0",
-    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/axios": "^5.9.2",
     "@nuxtjs/dotenv": "^1.4.0",
+    "@nuxtjs/moment": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
     "color": "^3.1.2",
     "debug": "^4.1.1",
@@ -26,19 +27,27 @@
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
     "gulp-git": "^2.10.0",
+    "idle-vue": "^2.0.5",
     "jsonschema": "^1.2.5",
     "lodash": "^4.17.15",
     "nuxt": "^2.0.0",
+    "nuxt-storage": "^1.2.2",
+    "pusher-js": "^5.0.3",
     "rainbowvis.js": "^1.0.1",
     "schema-validator": "^3.3.1",
     "supports-color": "^7.1.0",
     "uuid": "^3.3.3",
+    "v-jsoneditor": "^1.2.3",
+    "vue-advanced-cropper": "^0.15.2",
     "vue-awesome-form": "^1.0.4",
     "vue-flash-message": "^0.7.2",
     "vue-form-generator": "^2.3.4",
     "vue-izitoast": "^1.2.1",
     "vue-m-message": "^2.0.0",
+    "vue-shortkey": "^3.1.7",
+    "vue-slim-cropper": "^0.1.0",
     "vue-toast-notification": "^0.0.3",
+    "vue2-dropzone": "^3.6.0",
     "vuedraggable": "^2.23.2",
     "vuetify-toast-snackbar": "^0.6.1"
   },
