compat changes for json

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "tools:sync": "gulp sync",
     "tools:update": "gulp update",
     "dev": "nuxt",
-    "build": "npm run tools:update && nuxt build",
-    "start": "npm run tools:update && nuxt start",
+    "build": "nuxt build",
+    "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "fix": "eslint --ext .js,.vue --ignore-path .gitignore . --fix",
